Corrigindo bug em que o cliente não finalizava o programa da maneira adeuqada.